cabal-version: 1.12

name:           crypton-box
version:        1.1.0
synopsis:       NaCl crypto_box and crypto_secret_box implementations based on crypton primitives.
description:    NaCl crypto_box and crypto_secret_box implementations based on crypton primitives. See the README on GitHub for more information. <https://github.com/yutotakano/crypton-box>
category:       Cryptography
homepage:       https://github.com/yutotakano/crypton-box#readme
bug-reports:    https://github.com/yutotakano/crypton-box/issues
author:         Yuto Takano
maintainer:     moa17stock@gmail.com
copyright:      2025 Yuto Takano
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

tested-with:
    GHC == 9.4.8

source-repository head
  type: git
  location: https://github.com/yutotakano/crypton-box

library
  exposed-modules:
      Crypto.Box
      Crypto.SecretBox
  hs-source-dirs:
      src
  default-extensions:
      OverloadedStrings
  build-depends:
      base >=4.7 && <5
    , bytestring  >= 0.9 && <1.0.0.0
    , crypton  >= 1.0.0 && <2.0.0
    , memory  >= 0.18 && <1.0
  default-language: Haskell2010

test-suite crypton-box-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Crypto.BoxSpec
      Crypto.SecretBoxSpec
  hs-source-dirs:
      test
  default-extensions:
      OverloadedStrings
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
      base >=4.7 && <5
    , bytestring
    , crypton
    , hspec
    , memory
    , crypton-box
  default-language: Haskell2010
